# anomaly_detector

./: .gitignore  Observability_Anomaly_Detection.ipynb  README.md  pyproject.toml
anomaly_detector/: dataloader.py  detector.py  main.py
anomaly_detector/resources/: metrics_data.csv
anomaly_detector/streaming/: consumer.py  producer.py
